
[tool.poetry]
name = "Montreal-bed-bug-reports"
version = "0.1.0"
description = ""
authors = ["Karim H"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
