
[tool.poetry]
name = "data_retriever"
version = "0.1.0"
description = ""
authors = ["Karim H"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.10.0"
pytest = "^7.2.2"
pytest-cov = "^2.10.1"
yapf = "^0.32.0"
mypy = "^1.2.0"
types-requests = "^2.28.11.17"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
